--- a/Website/index.html
+++ b/Website/index.html
@@ -30,7 +30,7 @@
          <div  class="content">
             <h1>Web Design &<br><span>Development</span> <br>Course</h1>
             <p class="par">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio accusamus <br> adipisci, iusto hic  consectetur mollitia cupiditate provident alias. <br> Sit at quibusdam consequuntur maxime?</p>
-
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad deleniti modi illum cupiditate eum repudiandae expedita, enim in dolore deserunt voluptate tempora quasi omnis explicabo doloremque obcaecati totam nulla laboriosam.</p>
             <button class="cn"><a href="#">JOIN US</a></button>
 
             <div class="form">
