--- a/Website/video.html
+++ b/Website/video.html
@@ -14,7 +14,7 @@
         <div class="content">
             <h1>Trailer: On Digital & on Demand </h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam laudantium dolores blanditiis. Ab repellat est ipsum quos doloremque et officia neque soluta, vitae possimus eligendi, mollitia, amet similique veritatis earum?</p>
-            <button id="mybtn"onclick="myFunction()">Pause></button>
+            <button id="mybtn"onclick="myFunction()">Pause</button>
         </div>
 </body>
 </html>
