--- a/Video/video.html
+++ b/Video/video.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trailer</title>
+    <link rel="stylesheet" href="Website/video.css">
 </head>
 <body>
     <!-- Video -->
         <video autoplay muted loop id="myVideo">
-            <source src=".vscode/video.mp4" type="video/mp4"> 
+            <source src=".vscode/video.mp4" type="video/mp4"  > 
         </video>
         <div class="content">
             <h1>Trailer: On Digital & on Demand </h1>
